Closed Bug 1653561 Opened 6 years ago Closed 5 years ago

uriModified = mLoadingEntry->GetURIWasModified(); crashes because of null mLoadingEntry

Categories

(Core :: DOM: Navigation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Fission Milestone M6c
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox78 --- unaffected
firefox79 --- unaffected
firefox80 --- disabled
firefox81 --- disabled
firefox82 --- disabled
firefox83 --- fixed

People

(Reporter: smaug, Assigned: smaug)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

This is a recent regression.

Happens only when session-history-in-parent is enabled.

Regressed by: 1648040
Has Regression Range: --- → yes

Set release status flags based on info from the regressing bug 1648040

Do you have a specific testcase?

Hmm, I was just browsing something. I think it was some case where the page had iframes.

Severity: -- → S3
Priority: -- → P3

fission.sessionHistoryInParent is disabled.

Fission Milestone: --- → M6c
Assignee: nobody → bugs
Severity: S3 → S2
Status: NEW → ASSIGNED
Pushed by opettay@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e34c173ed83c Get URIWasModified from mLoadingEntry when it is available, r=peterv
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: