Bug 1653561, Get URIWasModified from mLoadingEntry when it is available, r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D90871